# chakra-orm

./: Cargo.toml  README.md  mkdocs.yml
bindings/python/: Cargo.toml
bindings/python/src/: connection.rs  lib.rs  model.rs  query.rs  types.rs
crates/chakra-cli/: Cargo.toml
crates/chakra-cli/src/: main.rs
crates/chakra-cli/src/commands/: db.rs  generate.rs  init.rs  migrate.rs  mod.rs  schema.rs
crates/chakra-core/: Cargo.toml
crates/chakra-core/src/: error.rs  expr.rs  lib.rs  model.rs  query.rs  result.rs  sql.rs  types.rs
crates/chakra-derive/: Cargo.toml
crates/chakra-derive/src/: field.rs  from_row.rs  lib.rs  model.rs
crates/chakra-migrate/: Cargo.toml
crates/chakra-migrate/src/: executor.rs  file.rs  generator.rs  history.rs  lib.rs  migration.rs  planner.rs
crates/chakra-mysql/: Cargo.toml
crates/chakra-mysql/src/: config.rs  connection.rs  executor.rs  lib.rs  types.rs
crates/chakra-pool/: Cargo.toml
crates/chakra-pool/src/: config.rs  lib.rs  manager.rs  metrics.rs  pool.rs
crates/chakra-postgres/: Cargo.toml
crates/chakra-postgres/src/: config.rs  connection.rs  executor.rs  introspect.rs  lib.rs  types.rs
crates/chakra-schema/: Cargo.toml
crates/chakra-schema/src/: ddl.rs  diff.rs  introspect.rs  lib.rs  schema.rs
crates/chakra-sqlite/: Cargo.toml
crates/chakra-sqlite/src/: config.rs  connection.rs  executor.rs  lib.rs  types.rs
docs/: index.md  tags.md
docs/api/: index.md
docs/assets/css/: custom.css
docs/features/: async-native.md  cross-language.md  databases.md  index.md  migrations.md  performance.md  pooling.md  type-safety.md
docs/includes/: abbreviations.md
docs/learn/: index.md
docs/learn/getting-started/: configuration.md  index.md  installation.md  quickstart-python.md  quickstart-rust.md
docs/learn/integrations/: fastapi.md  index.md
docs/learn/migrations/: index.md
docs/learn/models/: defining-models.md  field-types.md  index.md  options.md  relationships.md
docs/learn/queries/: basic.md  filtering.md  index.md
docs/learn/sessions/: index.md  transactions.md
docs/reference/: cli.md  index.md
docs/release-notes/: changelog.md  index.md  migration-guide.md  roadmap.md
docs/usage/: index.md
