[package]
name = "chakra-cli"
version = "0.1.0"
edition = "2021"
authors = ["Chakra ORM Contributors"]
description = "Command-line interface for Chakra ORM"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chakra-orm/chakra"
keywords = ["orm", "database", "cli", "migration"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "chakra"
path = "src/main.rs"

[dependencies]
chakra-core = { path = "../chakra-core" }
chakra-schema = { path = "../chakra-schema" }
chakra-migrate = { path = "../chakra-migrate" }
chakra-postgres = { path = "../chakra-postgres" }
chakra-mysql = { path = "../chakra-mysql" }
chakra-sqlite = { path = "../chakra-sqlite" }
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
colored = "2.1"
dialoguer = "0.11"
indicatif = "0.17"
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
