[package]
name = "chakra-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core query engine for Chakra ORM"
repository.workspace = true

[dependencies]
# Async
async-trait.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Types
chrono.workspace = true
uuid.workspace = true
rust_decimal.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Internal - optional for derive macro
chakra-derive = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-test.workspace = true

[features]
default = ["derive"]
derive = ["chakra-derive"]
