[package]
name = "chakra-schema"
version = "0.1.0"
edition = "2021"
authors = ["Chakra ORM Contributors"]
description = "Schema introspection and DDL generation for Chakra ORM"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chakra-orm/chakra"
keywords = ["orm", "database", "schema", "sql", "ddl"]
categories = ["database"]

[dependencies]
chakra-core = { path = "../chakra-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
